Source language is now supported

--- a/static/webpage.html
+++ b/static/webpage.html
@@ -85,9 +85,9 @@
 <body>
     <div class="container">
         <h1>Multi-modal Translation w/ Cloudflare</h1>
-        <textarea id="langInput" placeholder="Enter target language (e.g., 'es' for Spanish)"></textarea>
-        <textarea id="sourceLangInput" placeholder="Enter source language (e.g., 'en' for English)"></textarea>
         <textarea id="textInput" placeholder="Enter text to translate or click Record Voice"></textarea>
+        <textarea id="sourceLangInput" placeholder="Enter source language (e.g., 'en' for English)"></textarea
+        <textarea id="langInput" placeholder="Enter target language (e.g., 'es' for Spanish)"></textarea>
         <button id="translateButton">Translate</button>
         <button id="recordButton">Record Voice</button>
         <div id = "translationResult"></div>
